[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde_with = "3.12.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
derive_builder = "0.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
strum = { version = "0.26.3", features = ["derive"] }
derive_more = { version = "2.0.1", features = [
  "add",
  "from",
  "into",
  "display",
] }
base64 = "0.22.1"
http = "1.2.0"
bytes = "1.10.0"
